Вносит мелкие поправки после разбора ТЗ и критериев
Пропустил критерий Д10. Можно было бы сделать фон под карточками и картой, но в карточке пришлось бы делать display:block для img, а это снова микросетку подгонять. Нет времени на это. Как-нибудь потом

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <nav class="main-navigation">
             <ul class="site-navigation site-header-site-navigation">
               <li class="catalog-link">
-                <a href="#">Каталог товаров</a>
+                <a href="catalog.html">Каталог товаров</a>
                 <ul class="catalog-subcategories">
                   <li><a href="#">Виртуальная реальность</a></li>
                   <li><a href="#">Моноподы для селфи</a></li>
@@ -161,17 +161,17 @@
         </section>
       </div>
 
-      <section class="features">
+      <section class="services">
         <div class="layout-positioner">
-          <div class="features-container">
-            <h2 class="visually-hidden">Преимущества</h2>
-            <div class="features-slider-controls">
-              <button class="button">Доставка</button>
+          <div class="services-container">
+            <h2 class="visually-hidden">Сервисы</h2>
+            <div class="services-slider-controls">
+              <button class="button current-slide-button">Доставка</button>
               <button class="button">Гарантия</button>
-              <button class="button current-slide-button">Кредит</button>
+              <button class="button">Кредит</button>
             </div>
-            <ul class="features-slide-list">
-              <li class="slide-delivery">
+            <ul class="services-slide-list">
+              <li class="slide-delivery current-slide">
                 <h3>Доставка</h3>
                 <p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж.</p>
               </li>
@@ -179,7 +179,7 @@
                 <h3>Гарантия</h3>
                 <p>Если из-за возгорания купленного у нас товара у вас сгорит дом — не переживайте, мы выдадим вам новый.<br>Товар, не дом, конечно же.</p>
               </li>
-              <li class="slide-credit current-slide">
+              <li class="slide-credit">
                 <h3>Кредит</h3>
                 <p>Залезть в долговую яму стало проще! Кредитные консультанты подберут для вас наиболее выгодные условия&nbsp;кредита. Выгодные для нашего банка, разумеется.</p>
               </li>
@@ -220,7 +220,7 @@
             <section class="contacts">
               <h2>Контакты</h2>
               <p>Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
-              <a href="#"><img src="img/contacts-map.jpg" width="560" height="222" alt="Офис компании по адресу г. Москва, ул. Строителей, 15"></a>
+              <a href="https://www.google.ru/maps/place/ул.+Строителей,+15,+Москва"><img src="img/contacts-map.jpg" width="560" height="222" alt="Офис компании по адресу г. Москва, ул. Строителей, 15"></a>
               <a class="button button-support" href="#">Напишите нам</a>
             </section>
           </div>
