Добавляет пропущенные заглушки в ссылках "В корзину" и "Добавить к сравнению" в карточках товаров

--- a/catalog.html
+++ b/catalog.html
@@ -153,8 +153,8 @@
                       </h3>
                       <p class="product-image">
                         <img src="img/item-1.jpg" width="360" height="380" alt="Любительская селфи-палка">
-                        <a class="button button-product-card button-add-to-cart" href="">В корзину</a>
-                        <a class="button-product-card button-compare" href="">Добавить к сравнению</a>
+                        <a class="button button-product-card button-add-to-cart" href="#">В корзину</a>
+                        <a class="button-product-card button-compare" href="#">Добавить к сравнению</a>
                       </p>
                       <p class="product-price">
                         <b>500 руб.</b>
@@ -166,8 +166,8 @@
                       </h3>
                       <p class="product-image">
                         <img src="img/item-2.jpg" width="360" height="380" alt="Профессиональная селфи-палка">
-                        <a class="button button-product-card button-add-to-cart" href="">В корзину</a>
-                        <a class="button-product-card button-compare" href="">Добавить к сравнению</a>
+                        <a class="button button-product-card button-add-to-cart" href="#">В корзину</a>
+                        <a class="button-product-card button-compare" href="#">Добавить к сравнению</a>
                       </p>
                       <p class="product-price">
                         <b>1 500 руб.</b>
@@ -179,8 +179,8 @@
                       </h3>
                       <p class="product-image">
                         <img src="img/item-3.jpg" width="360" height="380" alt="Непотопляемая селфи-палка">
-                        <a class="button button-product-card button-add-to-cart" href="">В корзину</a>
-                        <a class="button-product-card button-compare" href="">Добавить к сравнению</a>
+                        <a class="button button-product-card button-add-to-cart" href="#">В корзину</a>
+                        <a class="button-product-card button-compare" href="#">Добавить к сравнению</a>
                       </p>
                       <p class="product-price">
                         <b>2 500 руб.</b>
@@ -192,8 +192,8 @@
                       </h3>
                       <p class="product-image">
                         <img src="img/item-4.jpg" width="360" height="380" alt="Селфи-палка «Следуй за мной»">
-                        <a class="button button-product-card button-add-to-cart" href="">В корзину</a>
-                        <a class="button-product-card button-compare" href="">Добавить к сравнению</a>
+                        <a class="button button-product-card button-add-to-cart" href="#">В корзину</a>
+                        <a class="button-product-card button-compare" href="#">Добавить к сравнению</a>
                       </p>
                       <p class="product-price">
                         <b>4 900 руб.</b>
