Добавляет ссылку на сервис карт в модалке с картой

--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
 
     <section class="modal modal-map">
       <h2 class="visually-hidden">Карта проезда в офис</h2>
-      <a href="#"><img src="img/contacts-map-big.jpg" width="960" height="559" alt="Офис компании по адресу г. Москва, ул. Строителей, 15"></a>
+      <a href="https://www.google.ru/maps/place/ул.+Строителей,+15,+Москва"><img src="img/contacts-map-big.jpg" width="960" height="559" alt="Офис компании по адресу г. Москва, ул. Строителей, 15"></a>
       <button class="modal-close" type="button">Закрыть</button>
     </section>
   </body>
