Добавляет ссылки на каталог там, где они нужны

--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
               <li class="catalog-link">
                 <a href="catalog.html">Каталог товаров</a>
                 <ul class="catalog-subcategories">
-                  <li><a href="#">Виртуальная реальность</a></li>
-                  <li><a href="#">Моноподы для селфи</a></li>
-                  <li><a href="#">Экшн-камеры</a></li>
-                  <li><a href="#">Фитнес-браслеты</a></li>
-                  <li><a href="#">Умные часы</a></li>
-                  <li><a href="#">Квадрокоптеры</a></li>
+                  <li><a href="catalog.html">Виртуальная реальность</a></li>
+                  <li><a href="catalog.html">Моноподы для селфи</a></li>
+                  <li><a href="catalog.html">Экшн-камеры</a></li>
+                  <li><a href="catalog.html">Фитнес-браслеты</a></li>
+                  <li><a href="catalog.html">Умные часы</a></li>
+                  <li><a href="catalog.html">Квадрокоптеры</a></li>
                 </ul>
               </li>
               <li class="delivery-link"><a href="#">Доставка</a></li>
@@ -151,12 +151,12 @@
         <section class="types-of-devices">
           <h2 class="visually-hidden">Представленные виды девайсов</h2>
           <ul class="types-of-devices-list">
-            <li class="virtual-reality"><a href="#">Виртуальная реальность</a></li>
-            <li class="selfie"><a href="#">Моноподы для&nbsp;селфи</a></li>
-            <li class="camera"><a href="#">Экшн-камеры</a></li>
-            <li class="fitness"><a href="#">Фитнес-браслеты</a></li>
-            <li class="smart-watch"><a href="#">Умные часы</a></li>
-            <li class="drone"><a href="#">Квадрокоптеры</a></li>
+            <li class="virtual-reality"><a href="catalog.html">Виртуальная реальность</a></li>
+            <li class="selfie"><a href="catalog.html">Моноподы для&nbsp;селфи</a></li>
+            <li class="camera"><a href="catalog.html">Экшн-камеры</a></li>
+            <li class="fitness"><a href="catalog.html">Фитнес-браслеты</a></li>
+            <li class="smart-watch"><a href="catalog.html">Умные часы</a></li>
+            <li class="drone"><a href="catalog.html">Квадрокоптеры</a></li>
           </ul>
         </section>
       </div>
