--- a/catalog.html
+++ b/catalog.html
@@ -34,12 +34,12 @@
               <li class="catalog-link">
                 <a href="#">Каталог товаров</a>
                 <ul class="catalog-subcategories">
-                  <li><a href="#">Виртуальная реальность</a></li>
-                  <li><a href="#">Фитнес-браслеты</a></li>
-                  <li><a href="#">Квадрокоптеры</a></li>
-                  <li><a href="#">Моноподы для селфи</a></li>
-                  <li><a href="#">Умные часы</a></li>
-                  <li><a href="#">Экшн-камеры</a></li>
+                  <li><a href="catalog.html">Виртуальная реальность</a></li>
+                  <li><a href="catalog.html">Фитнес-браслеты</a></li>
+                  <li><a href="catalog.html">Квадрокоптеры</a></li>
+                  <li><a href="catalog.html">Моноподы для селфи</a></li>
+                  <li><a href="catalog.html">Умные часы</a></li>
+                  <li><a href="catalog.html">Экшн-камеры</a></li>
                 </ul>
               </li>
               <li class="delivery-link"><a href="#">Доставка</a></li>
