--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
             <section class="contacts">
               <h2>Контакты</h2>
               <p>Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
-              <a href="https://www.google.ru/maps/place/ул.+Строителей,+15,+Москва"><img src="img/contacts-map.jpg" width="560" height="222" alt="Офис компании по адресу г. Москва, ул. Строителей, 15"></a>
+              <a class="map-link" href="https://www.google.ru/maps/place/ул.+Строителей,+15,+Москва"><img src="img/contacts-map.jpg" width="560" height="222" alt="Офис компании по адресу г. Москва, ул. Строителей, 15"></a>
               <a class="button button-support" href="#">Напишите нам</a>
             </section>
           </div>
@@ -288,7 +288,11 @@
     <section class="modal modal-map">
       <h2 class="visually-hidden">Карта проезда в офис</h2>
       <a href="https://www.google.ru/maps/place/ул.+Строителей,+15,+Москва"><img src="img/contacts-map-big.jpg" width="960" height="559" alt="Офис компании по адресу г. Москва, ул. Строителей, 15"></a>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2249.1125488779976!2d37.52742931592807!3d55.687030980535816!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54cf65f5c8955%3A0x694710ccd55501e!2z0YPQuy4g0KHRgtGA0L7QuNGC0LXQu9C10LksIDE1LCDQnNC-0YHQutCy0LAsIDExOTMxMQ!5e0!3m2!1sru!2sru!4v1562789562238!5m2!1sru!2sru" width="960" height="559" frameborder="0" style="border:0" allowfullscreen></iframe>
       <button class="modal-close" type="button">Закрыть</button>
     </section>
+
+    <script src="js/script.js"></script>
+
   </body>
 </html>
