--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="format-detection" content="telephone=no">
     <title>HTML Academy: Девайс</title>
     <link href="css/normalize.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
+    <link href="css/style.min.css" rel="stylesheet">
   </head>
   <body class="index-page">
     <header class="site-header">
@@ -292,7 +292,7 @@
       <button class="modal-close" type="button">Закрыть</button>
     </section>
 
-    <script src="js/script.js"></script>
+    <script src="js/script.min.js"></script>
 
   </body>
 </html>
